CHARM-106 Refactor controllers to enhance logging and response handling
Added detailed logging for request data, processing actions, and results across controllers (Loan, Firm, Fee, Bank). Improved null checks and response handling for resource retrieval endpoints, ensuring appropriate HTTP statuses (e.g., NOT_FOUND or NO_CONTENT). Removed redundant methods and introduced consistent debug statements for action results.